@@ -1,3 +1,8 @@
+2008-12-09  Ian Lance Taylor  <iant@google.com>
+
+	* testsuite/initpri1.c: Change all declarations to be full
+	prototypes by adding void, to avoid compiler warnings.
+
 2008-12-05  Rafael Avila de Espindola  <espindola@google.com>
 
 	* options.cc (General_options::parse_plugin_opt): New.
